# test_embarque

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: AcquisitionController.cpp  AcquisitionController.h  DatabaseManager.cpp  DatabaseManager.h  HumiditySensor.cpp  HumiditySensor.h  ISensor.h  Measurement.h  NetworkSyncManager.cpp  NetworkSyncManager.h  SensorBase.cpp  SensorManager.cpp  SensorManager.h  TemperatureSensor.cpp  TemperatureSensor.h  sensorbase.h
ui/: MainWindow.cpp  MainWindow.h
